# clip-mash

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Notes.md  README.md  build.rs  format.sh  generate-client.sh  justfile  new-design.md  pre-push.sh  rename.sh  stash-compilation-maker.code-workspace
backend/: .gitignore  Cargo.toml  build.rs  justfile
backend/.sqlx/: query-00b7d82e4018c5caf6b9d64a957e9848badd2448d35bc5a1a6d5f49354f15190.json  query-02a1eff95d4ca5623fcc0883ae9285720785a952440ccf4819f288ed2ba2ace3.json  query-0409148f3235fa0f6b08aeaaeecee19e21abec1b867835e37fc42b17fb41e005.json  query-06f4e0e7bb9fdaf5da5fdc035d66fe512af3a2cf79fca80e4f6b09cf87166e4f.json  query-07c6d9d4aec55fbe5eba3b3b9f6e8f1b204c346cfe1f1c174d48fdf1f0330beb.json  query-0e933d078bd9a62b32faf42fe1ce8dd5bd661a5a5df3c352399fe1488bb2b76c.json  query-0efe20e157e3aa8b2ebc988350db83c4e05eb04f55ea7026694221ed1c73d6b8.json  query-10ee4cfbd42838ded4a5857fd19b1f2005d50d399b02e5ff0d1bf0966aaf017a.json  query-136439ed47f79b9779c37cd3002bcae9216e71435e37c8179b4295b8b5d6e588.json  query-13aa7bdb16a66268619f0b3f4d13624b4efcd148e8b7c101b6eaa41d2e55bd09.json  query-1748686cb6fc756e6e980028b737c940716c7eeb6991841081bfcb4123c86a0d.json  query-1791120cba3af5e32f42cfeb8bdd0e333d25803c77d8e9fba353b24c762af49a.json  query-2253332b0705af3fc0ee0577a8db638f9222d1d8e5c4ce1d39936bad1d75b34f.json  query-25d880633957465495b37cb46cc3d00e37dcafca5d08ef4367aadc4c3281fa6e.json  query-277767669cf1ea65da59a9a8edb2757a9ef2313c7b42154ddd299990d1c67979.json  query-286400872acaedadd90f9dc40df01ae5b45348ea5b7562763059b1724c237c2e.json  query-2880cc256793449f88c91fb1e0547c38b430bf15a91325645cf1d0a6e92e8e67.json  query-2928442ac9137e06f51e1f19fede0c1debbaa86e9b9385a937a3508913f62a53.json  query-297a835b567d473bc62bf9ca09dc2d857ff9db75bab39b75757bb3387ec96d44.json  query-2d0364dc3b34ca250203686b45990d666191f41be04cc2d6a2c5c2549fedd0a2.json  query-2db4958fcf872d0cb88214d7cf7c93bc3027bade4f9ec529e00b2b3bb123e48f.json  query-2defd14bee5f809e3ce27dc3f54287bb4f932123976e49cd1036d917407b8433.json  query-3391317a60263fac4dd0c912350c52f51f3f184e3357d5e4e3ee7cf109c08793.json  query-347021d4cddbba55d3316a53a1bf77cad782da6cdc50d6a98cc83f40d5ebacc9.json  query-362938cdb2f2843fa3d3b86b3fdb5d30324427630cf8aca8208f4d277aa04e1c.json  query-38de8451a600294f893d7f331f1cf84577ceb553b2621d6ae3933c1832d17eb9.json  query-396c11b1f562cb0f63f24ffe70adeb2788de0bbf1765c553719b336f397689f4.json  query-3c350bd98f1f1b2c9a59df6fd53ea95484ab9e4f4561acab3efa3f40c202886d.json  query-3cb671fb863b4ad6ffe7183813d61e6363cb851136248bdf45f359602b190a8b.json  query-3e270f52a8999dcd6f191d2772424617e53be30332633c0a18baf8052a817491.json  query-3fcbae9cb115269223d26781e198facf9247d28daced1a4cee0fb17e29f8842e.json  query-42b6398410e5be1b6b49fd8ec3a14ed93e2905b07df23b50287f3a9bca735b63.json  query-44c903fa1e38b168d293b7116b84d380fadd933657e25d110b45da6dd9dcdce9.json  query-454279917c8e4b04aa57f544473710b9d9eb246199982290c281ac7ce7607569.json  query-45577c3f6f9ad873aed430875819a4ba3f4e149dbd49f4a95f758c4b5f8aec29.json  query-4c49bde4ad5b70e82b34f5c7aebc5bac148b64a919f20cbdf92821cf2dde172e.json  query-4d8f99e89666fe48d689be301e6f228176858220a7579b53d35d9e04e3794461.json  query-4ecb8f3338add431f45ce7226e8de5bdbd405ad23a6bfe7a41b4cdf495934774.json  query-54ea6d3033d4713c246a81e65ed1af3d5d3263140fdb3186069db0268e8f4dbe.json  query-556ddc1fe6b607ef0b2916c3473271a9387b4a19850a66fa912e7941638ba802.json  (+90 more)
backend/clip-mash-types/: Cargo.toml
backend/clip-mash-types/src/: lib.rs
backend/data/funscripts/: dokkaebi.funscript
backend/data/templates/: description.md
backend/data/words/: adjectives.txt  animals.txt
backend/graphql/: create_marker.graphql  find_markers.graphql  find_scenes.graphql  find_tags.graphql  get_tag.graphql  health_check.graphql  schema.json
backend/migrations/: 20230428153356_init.sql  20230513051548_music_table.sql  20230520164754_songs_beat_column.sql  20230617162639_preview_image.sql  20230620151833_github_release_cache.sql  20230827070407_progress.sql  20230919052433_add_created_on_timestamps.sql  20230920140905_video_title_and_tags.sql  20231005225215_marker_stash_id.sql  20231014081939_ffprobe_info.sql  20240518094650_video_performers.sql  20240617121252_performers_table.sql
backend/src/: lib.rs  main.rs  progress.rs  util.rs
backend/src/data/: alexandria.rs  database.rs  mod.rs  service.rs  stash_api.rs
backend/src/helpers/: log.rs  math.rs  mod.rs  random.rs  sentry.rs  util.rs
backend/src/server/: docs.rs  dtos.rs  error.rs  mod.rs  static_files.rs
backend/src/service/: directories.rs  encoding_optimization.rs  fixtures.rs  funscript.rs  generator.rs  local_video.rs  migrations.rs  mod.rs  new_version_checker.rs  (+7 more)
backend/testfiles/: infinite-loop.json
crates/clip-mash/: Cargo.toml  justfile
crates/clip-mash-server/: .gitignore  Cargo.toml  justfile
lib/database/: .gitignore  Cargo.toml
server/: .gitignore  Cargo.toml  rustfmt.toml
server/.sqlx/: query-0e933d078bd9a62b32faf42fe1ce8dd5bd661a5a5df3c352399fe1488bb2b76c.json  query-3fcbae9cb115269223d26781e198facf9247d28daced1a4cee0fb17e29f8842e.json  query-454279917c8e4b04aa57f544473710b9d9eb246199982290c281ac7ce7607569.json  query-54ea6d3033d4713c246a81e65ed1af3d5d3263140fdb3186069db0268e8f4dbe.json  query-8e4c773dace6a12d81098bc337359c274ca0f61a9e2649afafb3f3645239f5c8.json  query-9befdd29da1d4bab077cbaeb93df565c49847f27151ee9321c5f028b6421074b.json  query-a8dc1372075dcf56204d842602b018abcc77c2ade981dd4350dd3b259952b9ae.json  query-ae058fac1ad8517fad857af13e23b343c766666682d5c04974855559fb575b81.json  query-b9c3097d83470bdb46dc2d4a3058be008a3a58e4f934db7d9d66753e75b0fccd.json  query-cd8bc1fcda3d9aaaab18fe0cac0f086603964d6ecaecf23336724ae94ea4548f.json  query-e738ce695769e98507a8f37366a84d053fc0deed1d46013e0976ff3e8132545c.json  query-fc93c0cc12fbb00b0092a501328cf09cb4d802da1e36866d2d3b7be0fbd10a26.json
server/graphql/: find_scenes.graphql  schema.json
server/migrations/: 20230909085637_unify_videos.sql
server/src/: main.rs
(+657 files in other folders)
