[package]
name = "stash-compilation-maker"
version = "0.5.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.15", features = ["macros", "multipart"] }
camino = "1.1.4"
color-eyre = "0.6.2"
directories = "5.0.0"
futures = "0.3.28"
graphql_client = "0.12.0"
include_dir = "0.7.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.3"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["io"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
webbrowser = "0.8.9"

[target.'cfg(unix)'.dependencies]
tar = "0.4"
xz2 = "0.1"

[target.'cfg(windows)'.dependencies]
zip = "0.6"
