[package]
name = "clip-mash"
version = "0.21.1"
edition = "2021"
repository = "https://github.com/soundchaser128/clip-mash"
license = "GPL-3.0"

[package.metadata.wix]
upgrade-guid = "B3F736FE-B11F-49BA-91BE-E92F52FD73EE"
path-guid = "890D7E4F-304E-4294-BAB2-AD649071C02C"
license = false
eula = false

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
camino = { version = "1.1.6", features = ["serde1"] }
color-eyre = "0.6.2"
directories = "5.0.1"
float-cmp = "0.9.0"
fraction = "0.15.0"
futures = "0.3.28"
graphql_client = "0.14.0"
hound = "3.5.1"
include_dir = "0.7.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
mimalloc = "0.1.30"
num_cpus = "1.16.0"
opener = "0.7.0"
ordered-float = "4.1.0"
rand = "0.8.5"
regex = "1.9.6"
reqwest = { version = "0.12.0", features = ["json"] }
sanitise-file-name = "1.0.0"
semver = "1.0.20"
sentry = { version = "0.32.2", features = ["debug-images"] }
sentry-tower = { version = "0.32.2", features = ["axum-matched-path"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
tera = "1.19.1"
time = { version = "0.3.29", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
walkdir = "2.4.0"
webbrowser = "1.0"
youtube_dl = { version = "0.10.0", features = [
    "tokio",
    "downloader-native-tls",
] }

[target.'cfg(unix)'.dependencies]
tar = "0.4.40"
xz2 = "0.1.7"

[target.'cfg(windows)'.dependencies]
zip = "1.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
aubio = { version = "0.2.1", features = ["bindgen"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
aubio = { version = "0.2.1", features = ["builtin"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
fake = "2.8.0"
tracing-test = "0.2.4"
mock_instant = "0.4.0"
graphql-parser = "0.4.0"
wiremock = "0.6.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

[profile.release]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
