[package]
name = "clip-mash"
version = "0.22.0-pre.5"
edition = "2021"
default-run = "clip-mash"
license = "GPL-3.0"

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
camino = { version = "1.1.6", features = ["serde1"] }
color-eyre = "0.6.2"
directories = "5.0.1"
float-cmp = "0.10.0"
fraction = "0.15.0"
futures = "0.3.28"
graphql_client = "0.14.0"
hound = "3.5.1"
include_dir = "0.7.3"
itertools = "0.13.0"
lazy_static = "1.4.0"
mimalloc = "0.1.30"
num_cpus = "1.16.0"
ordered-float = "4.1.0"
rand = "0.8.5"
regex = "1.9.6"
reqwest = { version = "0.12.0", default-features = false, features = ["json"] }
sanitise-file-name = "1.0.0"
semver = "1.0.20"
sentry = { version = "0.34", features = ["debug-images"] }
sentry-tower = { version = "0.34", features = ["axum-matched-path"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
tinytemplate = "1.2"
time = { version = "0.3.29", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
utoipa = { version = "5.1.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
walkdir = "2.4.0"
webbrowser = "1.0"
youtube_dl = { version = "0.10.0", features = [
    "tokio",
    "downloader-native-tls",
] }
num-traits = "0.2.19"

[target.'cfg(unix)'.dependencies]
tar = "0.4.40"
xz2 = "0.1.7"

[target.'cfg(windows)'.dependencies]
# used for listing drives on windows
sysinfo = "0.32"
# used for unzipping the downloaded ffmpeg archive
zip = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
aubio = { version = "0.2.1", features = ["bindgen"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
aubio = { version = "0.2.1", features = ["builtin"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
fake = "2.8.0"
tracing-test = "0.2.4"
mock_instant = "0.5"
graphql-parser = "0.4.0"
wiremock = "0.6.0"
