[package]
name = "clip-mash-server"
version = "0.23.1"
edition = "2024"
default-run = "clip-mash-server"
license = "GPL-3.0"

[dependencies]
clip-mash = { path = "../clip-mash" }

async-stream = "0.3.6"
axum = { version = "0.8", features = ["macros", "multipart"] }
camino = { version = "1.1.9", features = ["serde1"] }
color-eyre = "0.6.3"
futures = "0.3.31"
include_dir = "0.7.4"
mimalloc = "0.1.43"
rand = "0.9.1"
sanitise-file-name = "1.0.0"
sentry = { version = "0.37", features = ["debug-images"] }
sentry-tower = { version = "0.37", features = ["axum-matched-path"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
webbrowser = "1.0"
reqwest = { version = "0.12.11", default-features = false, features = ["json"] }

[target.'cfg(windows)'.dependencies]
# used for listing drives on windows
sysinfo = "0.34"
