[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
color-eyre = "0.6.3"
futures = "0.3.31"
ordered-float = "5.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"

[dev-dependencies]
tracing-test = "0.2.5"
